namespace java com.goldgov.origin.modules.resource.api

struct RpcResource {
	1: i32 resourceID,
	2: string resourceName,
	3: string resourceCode,
	4: string description
}
